--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -12,7 +12,7 @@ html, body{
     margin: 0;
     padding: 0;
     color: white;
-    background-color: black;
+    background-color: rgb(255, 6, 6);
 }
 
 #prematch_table, #postmatch_table {
